GUI-598 delaying table deletion for flicker bug

--- a/stylesheets/less/partials/worksheet.less
+++ b/stylesheets/less/partials/worksheet.less
@@ -152,12 +152,14 @@
         .noSelection;
         margin: 0 14px;
         height: 35px;
+        overflow: hidden;
 
         .rowScroller {
             width: 250px;
             width: 100%;
             height: 11px;
             margin-top: 12px;
+            margin-bottom: 25px;
             background-color: @color-bar-border;
             box-shadow: inset 0px 1px #1A1C1D, 0px 1px #d5d5d5;
             position: relative;
